<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <prerequisites>
    <maven>3.3.3</maven>
  </prerequisites>  
  <groupId>daylightchart</groupId>
  <artifactId>daylightchart-all</artifactId>
  <packaging>pom</packaging>
  <version>5.0.2</version>
  <name>Daylight Chart [All]</name>
  <description>Daylight Chart shows sunrise and sunset times in an attractive chart, for any location in the world. The effect of daylight savings time is also displayed. Charts can be exported to image files.</description>
  <inceptionYear>2007</inceptionYear>
  <licenses>
    <license>
      <name>GNU Lesser General Public License</name>
      <url>http://www.gnu.org/copyleft/lesser.txt</url>
    </license>
  </licenses>
  <developers>
    <developer>
      <name>Sualeh Fatehi</name>
      <id>sfatehi</id>
      <email>sualeh@hotmail.com</email>
      <organization>Sualeh Fatehi</organization>
      <roles>
        <role>All</role>
      </roles>
      <timezone>-5</timezone>
    </developer>
  </developers>
  <organization>
    <name>Sualeh Fatehi</name>
  </organization>
  <modules>
    <module>geoname</module>
    <module>daylightchart-options</module>
    <module>daylightchart-chart</module>
    <module>daylightchart</module>
    <module>daylightchart-web</module>
  </modules>
  <repositories>
    <repository>
      <id>spring-milestones</id>
      <name>Spring Milestones</name>
      <url>https://repo.spring.io/milestone</url>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
  </repositories>
  <pluginRepositories>
    <pluginRepository>
      <id>spring-milestones</id>
      <name>Spring Milestones</name>
      <url>https://repo.spring.io/milestone</url>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </pluginRepository>
  </pluginRepositories>
  <properties>
      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
      <maven.compiler.release>21</maven.compiler.release>
  </properties>  
  <dependencies>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>6.0.3</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.hamcrest</groupId>
      <artifactId>hamcrest</artifactId>
      <version>3.0</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.15.0</version>
        <configuration>
          <release>21</release>
        </configuration>
      </plugin>	  
    </plugins>
  </build> 
</project>
